--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^2.0.2",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "semantic-release": "^15.4.2",
