--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@semantic-release/changelog": "^2.0.2",
+    "@semantic-release/git": "^5.0.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "semantic-release": "^15.4.2",
