--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
       - checkout
       - run:
           name: install
-          command: npm install
+          command: yarn install
       - run:
           name: test
-          command: npm run test
+          command: yarn run test
       - run:
           name: release
-          command: npm run semantic-release || true
+          command: yarn run semantic-release || true
