feat(npm): add @semantic-release/npm to prepare phase

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "path": "@semantic-release/changelog",
         "changelogFile": "CHANGELOG.md"
       },
-      "@semantic-release/git"
+      "@semantic-release/git",
+      "@semantic-release/npm"
     ]
   }
 }
